@@ -1,5 +1,7 @@
 Revision history for Module::Provision
 
+          - Select project does better job of picking the project dir
+
 0.30.1    2014-01-15 18:05:13
           - Using Unexpected exception classes
           - Stopped using C::U::File::io
